[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeone"
version = "0.1.0"
description = "Barbell crypto signal execution: Hyperliquid perps + Polymarket MM"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "structlog>=24.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "websockets>=12.0",
    "httpx>=0.27",
    "orjson>=3.10",
    "eth-account>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
    "pytest-freezer>=0.4",
    "ruff>=0.4",
]

[project.scripts]
forgeone-hyperliquid-paper = "forgeone.strategies.hyperliquid_paper:main"
forgeone-backtest-port = "forgeone.scripts.backtest_continuation_port:main"
forgeone-replay = "forgeone.scripts.replay_paper_day:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets.*",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
